--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,33 +1,31 @@
-name: Python CI
+name: CI Pipeline
 
 on:
   push:
     branches:
-      - '**'  # Trigger CI on push to any branch
-  pull_request:
-    branches:
-      - main  # Trigger CI on pull requests targeting the main branch
+      - main  # Or any other branch you want
   schedule:
-    - cron: '0 0 * * *'  # Run the CI every day at midnight UTC (adjust the time if needed)
+    - cron: '0 0 * * *'  # Run daily at midnight (UTC)
 
 jobs:
-  test:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu image for CI
+  lint:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v3  # Checks out the repository code
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'  # Use Python 3.12 (adjust as needed)
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'  # Adjust to your preferred version
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install dependencies from requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Or `pip install tox` if you manage dependencies that way
+        pip install tox  # If you didn't include tox in `requirements.txt`
 
-      - name: Run tests
-        run: |
-          pytest tests/test_main.py --maxfail=1 --disable-warnings -q  # Run only test_main.py
+    - name: Run linters (flake8)
+      run: |
+        tox -e lint  # Runs flake8 as part of tox
